# src/main/java/com/yapp/pet/web/pet/PetController.java
@@ -6,7 +6,11 @@ import com.yapp.pet.global.annotation.AuthAccount;
 import com.yapp.pet.web.pet.model.PetRequest;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -25,5 +29,12 @@ public class PetController {
     public long register(@AuthAccount Account account, @Valid @ModelAttribute PetRequest request) {
         log.info("tags = {}", request.getTags());
         return petService.addPet(account, request);
+    }
+
+    @DeleteMapping("/pets/{pet-id}")
+    public ResponseEntity<Void> delete(@AuthAccount Account account, @PathVariable("pet-id") long petId) {
+        petService.deletePetInfo(petId);
+
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 }
